--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://peckhouse.github.io/demo-supabase/",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
+    "predeploy": "pnpm run build",
+    "deployGh": "gh-pages -d dist",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -15,6 +18,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
+    "gh-pages": "^5.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
     "vue-tsc": "^1.4.2"
