--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "predeploy": "pnpm run build",
-    "deployGh": "gh-pages -d dist",
+    "deployGh": "cd dist && cp index.html 404.html && cd .. && gh-pages -d dist",
     "preview": "vite preview"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.24.0",
+    "vite-svg-loader": "^4.0.0",
     "vue": "^3.2.47",
     "vue-router": "^4.2.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
     "gh-pages": "^5.0.0",
+    "sass": "^1.62.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
     "vue-tsc": "^1.4.2"
